--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.8.2",
     "add": "^2.0.6",
+    "contentful": "^9.1.18",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "swiper": "^8.0.7",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@redux-devtools/core": "^3.11.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
-    "prettier": "2.6.1"
+    "postcss": "^8.4.12",
+    "prettier": "2.6.1",
+    "tailwindcss": "^3.0.23"
   }
 }
